# DeFiers-Portfolio-Tracker

./: .gitignore  README.md
.github/: CODEOWNERS
docs/: crypto_sprint1_stories.md  se_proj.docx  se_proj_arch.docx  test_plan.docx
src/backend/: .env.example  README.md  pyproject.toml
src/backend/app/: __init__.py  config.py  database.py  deps.py  jwt_manager.py  main.py  redis_client.py  tasks.py
src/backend/app/api/: __init__.py  sessions.py
src/backend/app/models/: __init__.py
src/backend/app/schemas/: __init__.py
src/backend/app/services/: __init__.py
src/backend/tests/: conftest.py  test_health.py  test_jwt.py  test_sessions.py
src/defier/: package-lock.json  package.json
